--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
         <!--Unordered list - created in JavaScript-->
     </header>
 
-    <section id ="section1">
+    <section id = "section1" class = "sectn" >
         <h1>Section 1</h1>
         <p>“Atticus said to Jem one day, “I’d rather you shot at tin cans in the backyard, but I know you’ll go after birds. Shoot all the blue jays you want, if you can hit ‘em, but remember it’s a sin to kill a mockingbird.” That was the only time I ever heard Atticus say it was a sin to do something, and I asked Miss Maudie about it. “Your father’s right,” she said. “Mockingbirds don’t do one thing except make music for us to enjoy. They don’t eat up people’s gardens, don’t nest in corn cribs, they don’t do one thing but sing their hearts out for us. That’s why it’s a sin to kill a mockingbird.” – Harper Lee, To Kill a Mockingbird</p>
     </section>
 
-    <section id ="section2">
+    <section id ="section2" class = "sectn">
         <h1>Section 2</h1>
         <p> “We believe that we can change the things around us in accordance with our desires—we believe it because otherwise we can see no favourable outcome. We do not think of the outcome which generally comes to pass and is also favourable: we do not succeed in changing things in accordance with our desires, but gradually our desires change. The situation that we hoped to change because it was intolerable becomes unimportant to us. We have failed to surmount the obstacle, as we were absolutely determined to do, but life has taken us round it, led us beyond it, and then if we turn round to gaze into the distance of the past, we can barely see it, so imperceptible has it become.” – Marcel Proust, In Search of Lost Time
         </p>
     </section>
 
-    <section id ="section3">
+    <section id ="section3" class = "sectn">
         <h1>Section 3</h1>
         <p>“Hello babies. Welcome to Earth. It’s hot in the summer and cold in the winter. It’s round and wet and crowded. On the outside, babies, you’ve got a hundred years here. There’s only one rule that I know of, babies-“God damn it, you’ve got to be kind.” – Kurt Vonnegut, God Bless You, Mr. Rosewater</p>
     </section>
 
-    <section id ="section4">
+    <section id ="section4" class = "sectn">
         <h1>Section 4</h1>
         <p>“I must not fear. Fear is the mind-killer. Fear is the little-death that brings total obliteration. I will face my fear. I will permit it to pass over me and through me. And when it has gone past I will turn the inner eye to see its path. Where the fear has gone there will be nothing. Only I will remain.” – Frank Herbert, Dune</p>
     </section>
 
-    <section id ="section5">
+    <section id ="section5" class = "sectn">
         <h1>Section 5</h1>
         <p>“Just remember that the things you put into your head are there forever, he said. You might want to think about that.
             You forget some things, dont you?
             Yes. You forget what you want to remember and you remember what you want to forget.” – Cormac McCarthy, The Road</p>
 
-            <button onclick="myFunction(sectionArray)">Top Position </button>
+            <button onclick="myFunction()">Top Position </button>
 
     </section>
 
