"Project completed - changed to pageYOffset for Chrome browser"

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,9 +7,10 @@
     <title>Landing page</title>
 
     <link rel="stylesheet" href="style/styles.css">
-
+    <script src="script/app.js"></script>
 
 </head>
+
 <body id = "homepage">
     <header id = "header" class = "header">
         <!--Unordered list - created in JavaScript-->
@@ -57,9 +59,6 @@
             You forget some things, dont you?
             Yes. You forget what you want to remember and you remember what you want to forget.” – Cormac McCarthy, The Road</p>
     </section>
-
-    <script src="script/app.js"></script>
-
 
 </body>
 </html>
